# geoai

./: .gitignore  LICENSE  README.md  SECURITY.md  app.js  index.html  netlify.toml  server.js  styles.css  tunnel.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: refresh-snapshot.yml  supabase-keepalive.yml
data/: snapshot.geojson  snapshot.json
docs/: research-report.md
mobile/: .gitignore  README.md  settings.gradle.kts
mobile/app/: build.gradle.kts  proguard-rules.pro
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/res/anim/: pop_in.xml  pop_out.xml
mobile/app/src/main/res/drawable/: cooldown_pill_bg.xml  crop_icon_bg.xml  crop_pill_bg.xml  gallery_photo_bg.xml  ic_arrow_left.xml  ic_check.xml  ic_cross.xml  ic_device.xml  ic_flash_auto.xml  ic_flash_off.xml  ic_flash_on.xml  ic_info.xml  ic_location.xml  ic_moon.xml  ic_settings.xml  ic_sun.xml  ic_undo.xml  ic_upload_fail.xml  ic_upload_success.xml  location_pill_bg.xml  radio_selected.xml  radio_unselected.xml  red_dot.xml  scrollbar_thumb.xml  settings_button_bg.xml  settings_dialog_bg.xml  settings_option_bg.xml  shutter_button.xml  shutter_inner.xml  shutter_ring.xml  splash_dot.xml  splash_ring.xml  upload_pill_bg.xml
mobile/app/src/main/res/layout/: activity_crop.xml  activity_main.xml  activity_splash.xml  dialog_gallery.xml  dialog_settings.xml  item_gallery_photo.xml
mobile/app/src/main/res/values-night/: colors.xml  themes.xml
mobile/gradle/: libs.versions.toml
mobile/gradle/wrapper/: gradle-wrapper.properties
netlify/functions/: assessments.js  photos.js  register.js  sign-upload.js
netlify/functions/_lib/: auth.js
tools/import/: Cargo.toml  README.md
tools/import/src/: main.rs
tools/snapshot/: Cargo.toml  README.md
tools/snapshot/src/: main.rs
(+14 files in other folders)
