[package]
name = "geoai-import"
version = "0.2.0"
edition = "2021"
description = "Bulk-import pavement-distress images to Cloudinary + Supabase"
repository = "https://github.com/richikchaudhuri/geoai"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client — rustls-tls avoids the OpenSSL toolchain pain on Windows
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Directory walking
walkdir = "2"

# EXIF GPS reader (crate is `kamadak-exif`, module is `exif`)
kamadak-exif = "0.5"

# JSON + error handling
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Pretty progress bar
indicatif = "0.17"

# Stream combinators for buffer_unordered concurrency
futures = "0.3"

# Content-hash for dedup / resumability
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
